Cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounts-tls
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
      - c1-dns-ozzr7srn.hcp.eastus.azmk8s.io
    secretName: accounts-tls-certs
  rules:
  - host: accounts.svc
    http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: accounts-svc
            port:
              number: 8080
            
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
      - busyboy.pro
    secretName: ttlssecret
  rules:
  - host: busyboy.pro
    http:
      paths:
      - path: /hello(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
